--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
   <groupId>com.morysh</groupId>
   <artifactId>lawn-mowers</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <name>lawn-mowers</name>
   <description>A simple lawn-mowing algorithm.</description>
